--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 # Build settings
 permalink: none
+
+collections:
+  products:
+    output: true
